scarlcompile/src/archive/y.output
   0  $accept : program $end

   1  program : statement_list

   2  statement_list : statement
   3                 | statement statement_list

   4  statement : device_declarator_statement
   5            | variable_definition_statement
   6            | function_definition_statement
   7            | class_definition_statement
   8            | constant_definition_statement

   9  block_statement : LBRACE statement_list_block_level RBRACE

  10  statement_list_block_level : statement_block_level
  11                             | statement_block_level statement_list_block_level

  12  statement_block_level : variable_definition_statement
  13                        | block_statement
  14                        | variable_set_statement
  15                        | function_invocation_statement
  16                        | if_block_statement
  17                        | while_block_statement
  18                        | return_statement
  19                        | method_invocation_statement

  20  device_declarator_statement : device_type IDENTIFIER SEMICOLON

  21  type_declarator : primitive_declarator type_augmentation_list
  22                  | user_declarator type_augmentation_list
  23                  | primitive_declarator
  24                  | user_declarator

  25  type_augmentation_list : type_augmentation
  26                         | type_augmentation type_augmentation_list

  27  type_augmentation : POINTER
  28                    | array_type_augmentation

  29  array_type_augmentation : LBRACKET arithmetic_expression RBRACKET

  30  primitive_declarator : primitive_type IDENTIFIER

  31  user_declarator : IDENTIFIER IDENTIFIER

  32  variable_definition_statement : type_declarator EQ expression SEMICOLON

  33  constant_definition_statement : CONSTANT type_declarator EQ expression SEMICOLON

  34  class_definition_statement : class_declarator class_body

  35  class_declarator : class_name
  36                   | class_name class_extending

  37  class_name : CLASS IDENTIFIER

  38  class_extending : EXTENDS IDENTIFIER

  39  class_body : LBRACE class_attribute_list RBRACE

  40  class_attribute_list : class_attribute
  41                       | class_attribute class_attribute_list

  42  class_attribute : function_definition_statement
  43                  | class_field

  44  class_field : type_declarator

  45  function_definition_statement : primitive_declarator LPAREN formal_parameter_list RPAREN block_statement

  46  variable_set_statement : IDENTIFIER EQ expression SEMICOLON

  47  return_statement : RETURN expression SEMICOLON
  48                   | RETURN SEMICOLON

  49  function_invocation : IDENTIFIER LPAREN parameter_list RPAREN

  50  function_invocation_statement : function_invocation SEMICOLON

  51  method_invocation : class_attribute_identifier LPAREN parameter_list RPAREN

  52  method_invocation_statement : method_invocation SEMICOLON

  53  class_attribute_identifier : IDENTIFIER DOT IDENTIFIER
  54                             | IDENTIFIER DOT class_attribute_identifier

  55  if_block_statement : IF LPAREN expression RPAREN block_statement
  56                     | IF LPAREN expression RPAREN block_statement ELSE block_statement

  57  while_block_statement : WHILE LPAREN expression RPAREN block_statement

  58  formal_parameter_list : type_declarator
  59                        | type_declarator COMMA formal_parameter_list
  60                        |

  61  parameter_list : type_declarator
  62                 | type_declarator COMMA parameter_list
  63                 |

  64  expression : logical_expression
  65             | allocation_expression

  66  allocation_expression : ALLOCATE allocation_invocation SEMICOLON

  67  allocation_invocation : primitive_type LPAREN parameter_list RPAREN
  68                        | IDENTIFIER LPAREN parameter_list RPAREN

  69  logical_expression : logical_and_expression
  70                     | logical_expression OR logical_and_expression

  71  logical_and_expression : equality_expression
  72                         | logical_and_expression AND equality_expression

  73  equality_expression : relational_expression
  74                      | equality_expression DBL_EQ relational_expression
  75                      | equality_expression NOT_EQ relational_expression

  76  relational_expression : bool_expression
  77                        | relational_expression GTR bool_expression
  78                        | relational_expression LESS bool_expression
  79                        | relational_expression GTR_EQ bool_expression
  80                        | relational_expression LESS_EQ bool_expression

  81  bool_expression : arithmetic_expression
  82                  | BANG arithmetic_expression

  83  arithmetic_expression : arithmetic_factor
  84                        | arithmetic_expression PLUS arithmetic_factor
  85                        | arithmetic_expression MINUS arithmetic_factor

  86  arithmetic_factor : arithmetic_unary
  87                    | arithmetic_factor STAR arithmetic_unary
  88                    | arithmetic_factor SLASH arithmetic_unary

  89  arithmetic_unary : unit
  90                   | MINUS arithmetic_unary
  91                   | LPAREN arithmetic_expression RPAREN

  92  unit : IDENTIFIER
  93       | integer_value
  94       | char_value
  95       | bool_value
  96       | function_invocation
  97       | array_accessor_unit
  98       | method_invocation
  99       | dereferenced_pointer

 100  array_accessor_unit : IDENTIFIER LBRACKET arithmetic_expression RBRACKET

 101  dereferenced_pointer : DEREF IDENTIFIER

 102  integer_value : DECIMAL
 103                | OCTAL
 104                | HEX
 105                | BINARY

 106  char_value : SGL_QUOTE IDENTIFIER SGL_QUOTE

 107  bool_value : TRUE
 108             | FALSE

 109  primitive_type : BOOL
 110                 | INT
 111                 | CHAR
 112                 | VOID

 113  device_type : LIGHT_ACTUATOR
 114              | SERVO_ACTUATOR
 115              | SOUND_SENSOR
 116              | LIGHT_SENSOR
 117              | DISTANCE_SENSOR
 118              | TEMPERATURE_SENSOR

state 0
	$accept : . program $end  (0)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	LIGHT_ACTUATOR  shift 6
	SERVO_ACTUATOR  shift 7
	SOUND_SENSOR  shift 8
	LIGHT_SENSOR  shift 9
	DISTANCE_SENSOR  shift 10
	TEMPERATURE_SENSOR  shift 11
	CONSTANT  shift 12
	CLASS  shift 13
	.  error

	program  goto 14
	statement_list  goto 15
	statement  goto 16
	device_declarator_statement  goto 17
	variable_definition_statement  goto 18
	function_definition_statement  goto 19
	class_definition_statement  goto 20
	constant_definition_statement  goto 21
	device_type  goto 22
	type_declarator  goto 23
	primitive_declarator  goto 24
	user_declarator  goto 25
	primitive_type  goto 26
	class_declarator  goto 27
	class_name  goto 28


state 1
	user_declarator : IDENTIFIER . IDENTIFIER  (31)

	IDENTIFIER  shift 29
	.  error


state 2
	primitive_type : BOOL .  (109)

	.  reduce 109


state 3
	primitive_type : INT .  (110)

	.  reduce 110


state 4
	primitive_type : CHAR .  (111)

	.  reduce 111


state 5
	primitive_type : VOID .  (112)

	.  reduce 112


state 6
	device_type : LIGHT_ACTUATOR .  (113)

	.  reduce 113


state 7
	device_type : SERVO_ACTUATOR .  (114)

	.  reduce 114


state 8
	device_type : SOUND_SENSOR .  (115)

	.  reduce 115


state 9
	device_type : LIGHT_SENSOR .  (116)

	.  reduce 116


state 10
	device_type : DISTANCE_SENSOR .  (117)

	.  reduce 117


state 11
	device_type : TEMPERATURE_SENSOR .  (118)

	.  reduce 118


state 12
	constant_definition_statement : CONSTANT . type_declarator EQ expression SEMICOLON  (33)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	.  error

	type_declarator  goto 30
	primitive_declarator  goto 31
	user_declarator  goto 25
	primitive_type  goto 26


state 13
	class_name : CLASS . IDENTIFIER  (37)

	IDENTIFIER  shift 32
	.  error


state 14
	$accept : program . $end  (0)

	$end  accept


state 15
	program : statement_list .  (1)

	.  reduce 1


state 16
	statement_list : statement .  (2)
	statement_list : statement . statement_list  (3)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	LIGHT_ACTUATOR  shift 6
	SERVO_ACTUATOR  shift 7
	SOUND_SENSOR  shift 8
	LIGHT_SENSOR  shift 9
	DISTANCE_SENSOR  shift 10
	TEMPERATURE_SENSOR  shift 11
	CONSTANT  shift 12
	CLASS  shift 13
	$end  reduce 2

	statement_list  goto 33
	statement  goto 16
	device_declarator_statement  goto 17
	variable_definition_statement  goto 18
	function_definition_statement  goto 19
	class_definition_statement  goto 20
	constant_definition_statement  goto 21
	device_type  goto 22
	type_declarator  goto 23
	primitive_declarator  goto 24
	user_declarator  goto 25
	primitive_type  goto 26
	class_declarator  goto 27
	class_name  goto 28


state 17
	statement : device_declarator_statement .  (4)

	.  reduce 4


state 18
	statement : variable_definition_statement .  (5)

	.  reduce 5


state 19
	statement : function_definition_statement .  (6)

	.  reduce 6


state 20
	statement : class_definition_statement .  (7)

	.  reduce 7


state 21
	statement : constant_definition_statement .  (8)

	.  reduce 8


state 22
	device_declarator_statement : device_type . IDENTIFIER SEMICOLON  (20)

	IDENTIFIER  shift 34
	.  error


state 23
	variable_definition_statement : type_declarator . EQ expression SEMICOLON  (32)

	EQ  shift 35
	.  error


state 24
	type_declarator : primitive_declarator . type_augmentation_list  (21)
	type_declarator : primitive_declarator .  (23)
	function_definition_statement : primitive_declarator . LPAREN formal_parameter_list RPAREN block_statement  (45)

	POINTER  shift 36
	LPAREN  shift 37
	LBRACKET  shift 38
	IDENTIFIER  reduce 23
	BOOL  reduce 23
	INT  reduce 23
	CHAR  reduce 23
	VOID  reduce 23
	EQ  reduce 23
	RBRACE  reduce 23

	type_augmentation_list  goto 39
	type_augmentation  goto 40
	array_type_augmentation  goto 41


state 25
	type_declarator : user_declarator . type_augmentation_list  (22)
	type_declarator : user_declarator .  (24)

	POINTER  shift 36
	LBRACKET  shift 38
	IDENTIFIER  reduce 24
	BOOL  reduce 24
	INT  reduce 24
	CHAR  reduce 24
	VOID  reduce 24
	RPAREN  reduce 24
	EQ  reduce 24
	COMMA  reduce 24
	RBRACE  reduce 24

	type_augmentation_list  goto 42
	type_augmentation  goto 40
	array_type_augmentation  goto 41


state 26
	primitive_declarator : primitive_type . IDENTIFIER  (30)

	IDENTIFIER  shift 43
	.  error


state 27
	class_definition_statement : class_declarator . class_body  (34)

	LBRACE  shift 44
	.  error

	class_body  goto 45


state 28
	class_declarator : class_name .  (35)
	class_declarator : class_name . class_extending  (36)

	EXTENDS  shift 46
	LBRACE  reduce 35

	class_extending  goto 47


state 29
	user_declarator : IDENTIFIER IDENTIFIER .  (31)

	.  reduce 31


state 30
	constant_definition_statement : CONSTANT type_declarator . EQ expression SEMICOLON  (33)

	EQ  shift 48
	.  error


state 31
	type_declarator : primitive_declarator . type_augmentation_list  (21)
	type_declarator : primitive_declarator .  (23)

	POINTER  shift 36
	LBRACKET  shift 38
	RPAREN  reduce 23
	EQ  reduce 23
	COMMA  reduce 23

	type_augmentation_list  goto 39
	type_augmentation  goto 40
	array_type_augmentation  goto 41


state 32
	class_name : CLASS IDENTIFIER .  (37)

	.  reduce 37


state 33
	statement_list : statement statement_list .  (3)

	.  reduce 3


state 34
	device_declarator_statement : device_type IDENTIFIER . SEMICOLON  (20)

	SEMICOLON  shift 49
	.  error


state 35
	variable_definition_statement : type_declarator EQ . expression SEMICOLON  (32)

	IDENTIFIER  shift 50
	MINUS  shift 51
	BANG  shift 52
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	ALLOCATE  shift 60
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error

	arithmetic_expression  goto 63
	expression  goto 64
	function_invocation  goto 65
	method_invocation  goto 66
	class_attribute_identifier  goto 67
	logical_expression  goto 68
	allocation_expression  goto 69
	logical_and_expression  goto 70
	equality_expression  goto 71
	relational_expression  goto 72
	bool_expression  goto 73
	arithmetic_factor  goto 74
	arithmetic_unary  goto 75
	unit  goto 76
	integer_value  goto 77
	char_value  goto 78
	bool_value  goto 79
	array_accessor_unit  goto 80
	dereferenced_pointer  goto 81


state 36
	type_augmentation : POINTER .  (27)

	.  reduce 27


state 37
	function_definition_statement : primitive_declarator LPAREN . formal_parameter_list RPAREN block_statement  (45)
	formal_parameter_list : .  (60)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	RPAREN  reduce 60

	type_declarator  goto 82
	primitive_declarator  goto 31
	user_declarator  goto 25
	primitive_type  goto 26
	formal_parameter_list  goto 83


state 38
	array_type_augmentation : LBRACKET . arithmetic_expression RBRACKET  (29)

	IDENTIFIER  shift 50
	MINUS  shift 51
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error

	arithmetic_expression  goto 84
	function_invocation  goto 65
	method_invocation  goto 66
	class_attribute_identifier  goto 67
	arithmetic_factor  goto 74
	arithmetic_unary  goto 75
	unit  goto 76
	integer_value  goto 77
	char_value  goto 78
	bool_value  goto 79
	array_accessor_unit  goto 80
	dereferenced_pointer  goto 81


state 39
	type_declarator : primitive_declarator type_augmentation_list .  (21)

	.  reduce 21


state 40
	type_augmentation_list : type_augmentation .  (25)
	type_augmentation_list : type_augmentation . type_augmentation_list  (26)

	POINTER  shift 36
	LBRACKET  shift 38
	IDENTIFIER  reduce 25
	BOOL  reduce 25
	INT  reduce 25
	CHAR  reduce 25
	VOID  reduce 25
	RPAREN  reduce 25
	EQ  reduce 25
	COMMA  reduce 25
	RBRACE  reduce 25

	type_augmentation_list  goto 85
	type_augmentation  goto 40
	array_type_augmentation  goto 41


state 41
	type_augmentation : array_type_augmentation .  (28)

	.  reduce 28


state 42
	type_declarator : user_declarator type_augmentation_list .  (22)

	.  reduce 22


state 43
	primitive_declarator : primitive_type IDENTIFIER .  (30)

	.  reduce 30


state 44
	class_body : LBRACE . class_attribute_list RBRACE  (39)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	.  error

	function_definition_statement  goto 86
	type_declarator  goto 87
	primitive_declarator  goto 24
	user_declarator  goto 25
	primitive_type  goto 26
	class_attribute_list  goto 88
	class_attribute  goto 89
	class_field  goto 90


state 45
	class_definition_statement : class_declarator class_body .  (34)

	.  reduce 34


state 46
	class_extending : EXTENDS . IDENTIFIER  (38)

	IDENTIFIER  shift 91
	.  error


state 47
	class_declarator : class_name class_extending .  (36)

	.  reduce 36


state 48
	constant_definition_statement : CONSTANT type_declarator EQ . expression SEMICOLON  (33)

	IDENTIFIER  shift 50
	MINUS  shift 51
	BANG  shift 52
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	ALLOCATE  shift 60
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error

	arithmetic_expression  goto 63
	expression  goto 92
	function_invocation  goto 65
	method_invocation  goto 66
	class_attribute_identifier  goto 67
	logical_expression  goto 68
	allocation_expression  goto 69
	logical_and_expression  goto 70
	equality_expression  goto 71
	relational_expression  goto 72
	bool_expression  goto 73
	arithmetic_factor  goto 74
	arithmetic_unary  goto 75
	unit  goto 76
	integer_value  goto 77
	char_value  goto 78
	bool_value  goto 79
	array_accessor_unit  goto 80
	dereferenced_pointer  goto 81


state 49
	device_declarator_statement : device_type IDENTIFIER SEMICOLON .  (20)

	.  reduce 20


state 50
	function_invocation : IDENTIFIER . LPAREN parameter_list RPAREN  (49)
	class_attribute_identifier : IDENTIFIER . DOT IDENTIFIER  (53)
	class_attribute_identifier : IDENTIFIER . DOT class_attribute_identifier  (54)
	unit : IDENTIFIER .  (92)
	array_accessor_unit : IDENTIFIER . LBRACKET arithmetic_expression RBRACKET  (100)

	LPAREN  shift 93
	LBRACKET  shift 94
	DOT  shift 95
	PLUS  reduce 92
	MINUS  reduce 92
	STAR  reduce 92
	SLASH  reduce 92
	RPAREN  reduce 92
	GTR  reduce 92
	LESS  reduce 92
	GTR_EQ  reduce 92
	LESS_EQ  reduce 92
	DBL_EQ  reduce 92
	NOT_EQ  reduce 92
	OR  reduce 92
	AND  reduce 92
	SEMICOLON  reduce 92
	RBRACKET  reduce 92


state 51
	arithmetic_unary : MINUS . arithmetic_unary  (90)

	IDENTIFIER  shift 50
	MINUS  shift 51
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error

	function_invocation  goto 65
	method_invocation  goto 66
	class_attribute_identifier  goto 67
	arithmetic_unary  goto 96
	unit  goto 76
	integer_value  goto 77
	char_value  goto 78
	bool_value  goto 79
	array_accessor_unit  goto 80
	dereferenced_pointer  goto 81


state 52
	bool_expression : BANG . arithmetic_expression  (82)

	IDENTIFIER  shift 50
	MINUS  shift 51
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error

	arithmetic_expression  goto 97
	function_invocation  goto 65
	method_invocation  goto 66
	class_attribute_identifier  goto 67
	arithmetic_factor  goto 74
	arithmetic_unary  goto 75
	unit  goto 76
	integer_value  goto 77
	char_value  goto 78
	bool_value  goto 79
	array_accessor_unit  goto 80
	dereferenced_pointer  goto 81


state 53
	arithmetic_unary : LPAREN . arithmetic_expression RPAREN  (91)

	IDENTIFIER  shift 50
	MINUS  shift 51
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error

	arithmetic_expression  goto 98
	function_invocation  goto 65
	method_invocation  goto 66
	class_attribute_identifier  goto 67
	arithmetic_factor  goto 74
	arithmetic_unary  goto 75
	unit  goto 76
	integer_value  goto 77
	char_value  goto 78
	bool_value  goto 79
	array_accessor_unit  goto 80
	dereferenced_pointer  goto 81


state 54
	integer_value : DECIMAL .  (102)

	.  reduce 102


state 55
	integer_value : OCTAL .  (103)

	.  reduce 103


state 56
	integer_value : HEX .  (104)

	.  reduce 104


state 57
	integer_value : BINARY .  (105)

	.  reduce 105


state 58
	bool_value : TRUE .  (107)

	.  reduce 107


state 59
	bool_value : FALSE .  (108)

	.  reduce 108


state 60
	allocation_expression : ALLOCATE . allocation_invocation SEMICOLON  (66)

	IDENTIFIER  shift 99
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	.  error

	primitive_type  goto 100
	allocation_invocation  goto 101


state 61
	dereferenced_pointer : DEREF . IDENTIFIER  (101)

	IDENTIFIER  shift 102
	.  error


state 62
	char_value : SGL_QUOTE . IDENTIFIER SGL_QUOTE  (106)

	IDENTIFIER  shift 103
	.  error


state 63
	bool_expression : arithmetic_expression .  (81)
	arithmetic_expression : arithmetic_expression . PLUS arithmetic_factor  (84)
	arithmetic_expression : arithmetic_expression . MINUS arithmetic_factor  (85)

	PLUS  shift 104
	MINUS  shift 105
	RPAREN  reduce 81
	GTR  reduce 81
	LESS  reduce 81
	GTR_EQ  reduce 81
	LESS_EQ  reduce 81
	DBL_EQ  reduce 81
	NOT_EQ  reduce 81
	OR  reduce 81
	AND  reduce 81
	SEMICOLON  reduce 81


state 64
	variable_definition_statement : type_declarator EQ expression . SEMICOLON  (32)

	SEMICOLON  shift 106
	.  error


state 65
	unit : function_invocation .  (96)

	.  reduce 96


state 66
	unit : method_invocation .  (98)

	.  reduce 98


state 67
	method_invocation : class_attribute_identifier . LPAREN parameter_list RPAREN  (51)

	LPAREN  shift 107
	.  error


state 68
	expression : logical_expression .  (64)
	logical_expression : logical_expression . OR logical_and_expression  (70)

	OR  shift 108
	RPAREN  reduce 64
	SEMICOLON  reduce 64


state 69
	expression : allocation_expression .  (65)

	.  reduce 65


state 70
	logical_expression : logical_and_expression .  (69)
	logical_and_expression : logical_and_expression . AND equality_expression  (72)

	AND  shift 109
	RPAREN  reduce 69
	OR  reduce 69
	SEMICOLON  reduce 69


state 71
	logical_and_expression : equality_expression .  (71)
	equality_expression : equality_expression . DBL_EQ relational_expression  (74)
	equality_expression : equality_expression . NOT_EQ relational_expression  (75)

	DBL_EQ  shift 110
	NOT_EQ  shift 111
	RPAREN  reduce 71
	OR  reduce 71
	AND  reduce 71
	SEMICOLON  reduce 71


state 72
	equality_expression : relational_expression .  (73)
	relational_expression : relational_expression . GTR bool_expression  (77)
	relational_expression : relational_expression . LESS bool_expression  (78)
	relational_expression : relational_expression . GTR_EQ bool_expression  (79)
	relational_expression : relational_expression . LESS_EQ bool_expression  (80)

	GTR  shift 112
	LESS  shift 113
	GTR_EQ  shift 114
	LESS_EQ  shift 115
	RPAREN  reduce 73
	DBL_EQ  reduce 73
	NOT_EQ  reduce 73
	OR  reduce 73
	AND  reduce 73
	SEMICOLON  reduce 73


state 73
	relational_expression : bool_expression .  (76)

	.  reduce 76


state 74
	arithmetic_expression : arithmetic_factor .  (83)
	arithmetic_factor : arithmetic_factor . STAR arithmetic_unary  (87)
	arithmetic_factor : arithmetic_factor . SLASH arithmetic_unary  (88)

	STAR  shift 116
	SLASH  shift 117
	PLUS  reduce 83
	MINUS  reduce 83
	RPAREN  reduce 83
	GTR  reduce 83
	LESS  reduce 83
	GTR_EQ  reduce 83
	LESS_EQ  reduce 83
	DBL_EQ  reduce 83
	NOT_EQ  reduce 83
	OR  reduce 83
	AND  reduce 83
	SEMICOLON  reduce 83
	RBRACKET  reduce 83


state 75
	arithmetic_factor : arithmetic_unary .  (86)

	.  reduce 86


state 76
	arithmetic_unary : unit .  (89)

	.  reduce 89


state 77
	unit : integer_value .  (93)

	.  reduce 93


state 78
	unit : char_value .  (94)

	.  reduce 94


state 79
	unit : bool_value .  (95)

	.  reduce 95


state 80
	unit : array_accessor_unit .  (97)

	.  reduce 97


state 81
	unit : dereferenced_pointer .  (99)

	.  reduce 99


state 82
	formal_parameter_list : type_declarator .  (58)
	formal_parameter_list : type_declarator . COMMA formal_parameter_list  (59)

	COMMA  shift 118
	RPAREN  reduce 58


state 83
	function_definition_statement : primitive_declarator LPAREN formal_parameter_list . RPAREN block_statement  (45)

	RPAREN  shift 119
	.  error


state 84
	array_type_augmentation : LBRACKET arithmetic_expression . RBRACKET  (29)
	arithmetic_expression : arithmetic_expression . PLUS arithmetic_factor  (84)
	arithmetic_expression : arithmetic_expression . MINUS arithmetic_factor  (85)

	PLUS  shift 104
	MINUS  shift 105
	RBRACKET  shift 120
	.  error


state 85
	type_augmentation_list : type_augmentation type_augmentation_list .  (26)

	.  reduce 26


state 86
	class_attribute : function_definition_statement .  (42)

	.  reduce 42


state 87
	class_field : type_declarator .  (44)

	.  reduce 44


state 88
	class_body : LBRACE class_attribute_list . RBRACE  (39)

	RBRACE  shift 121
	.  error


state 89
	class_attribute_list : class_attribute .  (40)
	class_attribute_list : class_attribute . class_attribute_list  (41)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	RBRACE  reduce 40

	function_definition_statement  goto 86
	type_declarator  goto 87
	primitive_declarator  goto 24
	user_declarator  goto 25
	primitive_type  goto 26
	class_attribute_list  goto 122
	class_attribute  goto 89
	class_field  goto 90


state 90
	class_attribute : class_field .  (43)

	.  reduce 43


state 91
	class_extending : EXTENDS IDENTIFIER .  (38)

	.  reduce 38


state 92
	constant_definition_statement : CONSTANT type_declarator EQ expression . SEMICOLON  (33)

	SEMICOLON  shift 123
	.  error


state 93
	function_invocation : IDENTIFIER LPAREN . parameter_list RPAREN  (49)
	parameter_list : .  (63)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	RPAREN  reduce 63

	type_declarator  goto 124
	primitive_declarator  goto 31
	user_declarator  goto 25
	primitive_type  goto 26
	parameter_list  goto 125


state 94
	array_accessor_unit : IDENTIFIER LBRACKET . arithmetic_expression RBRACKET  (100)

	IDENTIFIER  shift 50
	MINUS  shift 51
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error

	arithmetic_expression  goto 126
	function_invocation  goto 65
	method_invocation  goto 66
	class_attribute_identifier  goto 67
	arithmetic_factor  goto 74
	arithmetic_unary  goto 75
	unit  goto 76
	integer_value  goto 77
	char_value  goto 78
	bool_value  goto 79
	array_accessor_unit  goto 80
	dereferenced_pointer  goto 81


state 95
	class_attribute_identifier : IDENTIFIER DOT . IDENTIFIER  (53)
	class_attribute_identifier : IDENTIFIER DOT . class_attribute_identifier  (54)

	IDENTIFIER  shift 127
	.  error

	class_attribute_identifier  goto 128


state 96
	arithmetic_unary : MINUS arithmetic_unary .  (90)

	.  reduce 90


state 97
	bool_expression : BANG arithmetic_expression .  (82)
	arithmetic_expression : arithmetic_expression . PLUS arithmetic_factor  (84)
	arithmetic_expression : arithmetic_expression . MINUS arithmetic_factor  (85)

	PLUS  shift 104
	MINUS  shift 105
	RPAREN  reduce 82
	GTR  reduce 82
	LESS  reduce 82
	GTR_EQ  reduce 82
	LESS_EQ  reduce 82
	DBL_EQ  reduce 82
	NOT_EQ  reduce 82
	OR  reduce 82
	AND  reduce 82
	SEMICOLON  reduce 82


state 98
	arithmetic_expression : arithmetic_expression . PLUS arithmetic_factor  (84)
	arithmetic_expression : arithmetic_expression . MINUS arithmetic_factor  (85)
	arithmetic_unary : LPAREN arithmetic_expression . RPAREN  (91)

	PLUS  shift 104
	MINUS  shift 105
	RPAREN  shift 129
	.  error


state 99
	allocation_invocation : IDENTIFIER . LPAREN parameter_list RPAREN  (68)

	LPAREN  shift 130
	.  error


state 100
	allocation_invocation : primitive_type . LPAREN parameter_list RPAREN  (67)

	LPAREN  shift 131
	.  error


state 101
	allocation_expression : ALLOCATE allocation_invocation . SEMICOLON  (66)

	SEMICOLON  shift 132
	.  error


state 102
	dereferenced_pointer : DEREF IDENTIFIER .  (101)

	.  reduce 101


state 103
	char_value : SGL_QUOTE IDENTIFIER . SGL_QUOTE  (106)

	SGL_QUOTE  shift 133
	.  error


state 104
	arithmetic_expression : arithmetic_expression PLUS . arithmetic_factor  (84)

	IDENTIFIER  shift 50
	MINUS  shift 51
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error

	function_invocation  goto 65
	method_invocation  goto 66
	class_attribute_identifier  goto 67
	arithmetic_factor  goto 134
	arithmetic_unary  goto 75
	unit  goto 76
	integer_value  goto 77
	char_value  goto 78
	bool_value  goto 79
	array_accessor_unit  goto 80
	dereferenced_pointer  goto 81


state 105
	arithmetic_expression : arithmetic_expression MINUS . arithmetic_factor  (85)

	IDENTIFIER  shift 50
	MINUS  shift 51
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error

	function_invocation  goto 65
	method_invocation  goto 66
	class_attribute_identifier  goto 67
	arithmetic_factor  goto 135
	arithmetic_unary  goto 75
	unit  goto 76
	integer_value  goto 77
	char_value  goto 78
	bool_value  goto 79
	array_accessor_unit  goto 80
	dereferenced_pointer  goto 81


state 106
	variable_definition_statement : type_declarator EQ expression SEMICOLON .  (32)

	.  reduce 32


state 107
	method_invocation : class_attribute_identifier LPAREN . parameter_list RPAREN  (51)
	parameter_list : .  (63)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	RPAREN  reduce 63

	type_declarator  goto 124
	primitive_declarator  goto 31
	user_declarator  goto 25
	primitive_type  goto 26
	parameter_list  goto 136


state 108
	logical_expression : logical_expression OR . logical_and_expression  (70)

	IDENTIFIER  shift 50
	MINUS  shift 51
	BANG  shift 52
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error

	arithmetic_expression  goto 63
	function_invocation  goto 65
	method_invocation  goto 66
	class_attribute_identifier  goto 67
	logical_and_expression  goto 137
	equality_expression  goto 71
	relational_expression  goto 72
	bool_expression  goto 73
	arithmetic_factor  goto 74
	arithmetic_unary  goto 75
	unit  goto 76
	integer_value  goto 77
	char_value  goto 78
	bool_value  goto 79
	array_accessor_unit  goto 80
	dereferenced_pointer  goto 81


state 109
	logical_and_expression : logical_and_expression AND . equality_expression  (72)

	IDENTIFIER  shift 50
	MINUS  shift 51
	BANG  shift 52
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error

	arithmetic_expression  goto 63
	function_invocation  goto 65
	method_invocation  goto 66
	class_attribute_identifier  goto 67
	equality_expression  goto 138
	relational_expression  goto 72
	bool_expression  goto 73
	arithmetic_factor  goto 74
	arithmetic_unary  goto 75
	unit  goto 76
	integer_value  goto 77
	char_value  goto 78
	bool_value  goto 79
	array_accessor_unit  goto 80
	dereferenced_pointer  goto 81


state 110
	equality_expression : equality_expression DBL_EQ . relational_expression  (74)

	IDENTIFIER  shift 50
	MINUS  shift 51
	BANG  shift 52
	LPAREN  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	SGL_QUOTE  shift 62
	.  error
